@@ -8,14 +8,17 @@
 		<languageKey index="default" type="array">
 			<label index="pi1_title">File List</label>
 			<label index="pi1_plus_wiz_description"> Adds a frontend plugin which shows a list of files and folders inside a specified directory. </label>
+			<label index="config.noCache">Do not cache this plugin: Please not that this will prevent indexed_search to index files.</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="pi1_title">Dateiliste</label>
 			<label index="pi1_plus_wiz_description">Stellt Dateien und Ordner eines Verzeichnisses grafisch dar.</label>
+			<label index="config.noCache">Keine Cache für dieses Plugin: Bitte beachten Sie, dass es indexed_search verhindert, die Dateien zu indexieren.</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="pi1_title">Liste de fichiers</label>
 			<label index="pi1_plus_wiz_description">Affiche une liste de répertoires et de fichiers.</label>
+			<label index="config.noCache">Ne pas mettre le plugin en cache: Veuillez remarquer que ça empêchera indexed_search d'indexer les fichiers.</label>
 		</languageKey>
 	</data>
 </T3locallang>
